# graphic_projects

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  DEV_NOTES.MD  README.MD  shell.nix
ogldev/Include/: ogldev_math_3d.h
ogldev/tutorial1/: CMakeLists.txt
ogldev/tutorial3/: CMakeLists.txt
ogldev/tutorial3/src/: main.cpp
p14_models_geometric_shapes/: Makefile
p17_3d_terrain_movement/resources/: char.glb  house.glb
p18_minecraft_cpp/: Makefile
p18_minecraft_cpp/src/: Atlas.cpp  Biome.cpp  BiomeType.cpp  Block.cpp  BlockType.cpp  CameraController.cpp  Chunk.cpp  PerlinNoise.cpp  PerlinNoiseUtil.cpp  World.cpp  main.cpp
p19_game1/: CMakeLists.txt  game.c
p1_load_obj/: Makefile
p20_spaceship_flight/: Makefile
p20_spaceship_flight/src/: main.cpp
p21_terrain/: Makefile
p21_terrain/src/: main.cpp
p22_terrain_2d_arr_vec3/: Makefile
p22_terrain_2d_arr_vec3/src/: main.cpp
p23_terrain1/: Makefile
p23_terrain1/src/: main.cpp  terrainChunking.cpp  terrainChunking.h  viewCone.h  world.h
p24_terrain2/: Makefile
p24_terrain2/resources/: terrain.fs  terrain.vs
p24_terrain2/src/: main.cpp
p25_model_collision/src/: Collision.h  main.c
p26_text_on_top_of_model/src/: main.c
p27_core_3d_camera_fps/src/: main.c
p28_core_3d_camera_fps/src/: main.c
p29_shaders_base_lighting/src/: main.c  rlights.h
p2_models_animation_blend_custom/: Makefile
p30_shaders_basic_pbr_lighting/src/: main.c
p31_terrain/src/: main.c
p31_textures_particles_blending/: Makefile
p3_models_animation_blending/: Makefile
p7_models_billboard_rendering/: Makefile
p9_models_box_collisions/: Makefile
playground/: Makefile
playground.app/: Makefile
playground.core/: Makefile
playground.core.test/: Makefile
playground.test/: Makefile
playground/src/: main.c  (+1 more)
tower-blocks/: Makefile
(+65 files in other folders)
